--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
 <div>
 <h1>Welcome to Sushi Restro</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nam praesentium qui sed ipsam dolorem, quisquam repudiandae? Similique magnam, vero id sunt ducimus quis beatae, aliquam itaque maxime nemo enim?<30></30></p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit nam praesentium qui sed ipsam dolorem, quisquam repudiandae? <br>Similique magnam, vero id sunt ducimus quis beatae, aliquam itaque maxime nemo enim?s</p>
 <a href="#">Review Us</a>
-<video auto play muted loop>
-    <source src="" type="video/mp4">
-</video>
 </div>
+<video autoplay muted loop>
+    <source src="Running Sushi - 3625.mp4" type="video/mp4">
+</video>
+
 </body>
 </html>
